Fixed Text Color & Text Alignment in Email Input

--- a/ProductLandingPage/style.css
+++ b/ProductLandingPage/style.css
@@ -104,6 +104,11 @@ a {
     letter-spacing: 5px;
 }
 
+#email {
+    text-align: center;
+    color: #3d3d3d;
+}
+
 .primary-input {
     width: 40%;
     height: 30px;
